--- a/security.html
+++ b/security.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://acrisure.applytojob.com/apply/zNuAOnDJJX/Security-Automation-Engineer'>Security Automation Engineer - Acrisure LLC - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Anitian/743999698408740-security-operations-soc-analyst-1'>Anitian  Security Operations (SOC) Analyst 1 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -135,7 +139,7 @@
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://adjust.join.com/jobs/465543-information-security-analyst'>Job @ Adjust (Berlin): Information Security Analyst | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adjust.join.com/jobs/465543-information-security-analyst'>Job @ Adjust (Berlin): Information Security Analyst | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -167,7 +171,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FireEyeInc1/743999698284727-senior-security-engineer-ts-'>FireEye, Inc. Senior Security Engineer (TS) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/FireEyeInc1/743999698284727-senior-security-engineer-ts-'>FireEye, Inc. Senior Security Engineer (TS) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Arlington, VA, USA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -227,7 +231,7 @@
 <p><span class="badge badge-light">Minnesota, Minneapolis  Minneapolis</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/extrahop-networks-inc/job/oyDqbfww'>ExtraHop Networks, Inc. Careers - Senior Security Sales Engineer, France</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/extrahop-networks-inc/job/oyDqbfww'>ExtraHop Networks, Inc. Careers - Senior Security Sales Engineer, France</a></h5> 
 <p><span class="badge badge-light">France  France  Paris, France</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -372,7 +376,7 @@ application penetration tester. Here in Ryanair, you will conduct Manual?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Mitie/743999698124458-security-intelligence-analyst-sub-saharan-africa-'>Mitie Security & Intelligence Analyst (Sub-Saharan Africa) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Mitie/743999698124458-security-intelligence-analyst-sub-saharan-africa-'>Mitie Security & Intelligence Analyst (Sub-Saharan Africa) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada London</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -446,10 +450,6 @@ application penetration tester. Here in Ryanair, you will conduct Manual?...</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/herjavecgroup/job/oeenbfwK'>Herjavec Group Careers - Senior Security Engineer, Qradar/Splunk</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/taylorcorp/job/o7lobfwL'>Taylor Corporation Careers - Sr. Information Security Analyst</a></h5> 
-<p><span class="badge badge-light">Eden Prairie, Minnesota</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
 
